tests/snapshots/tui_snapshot__tui_mixed_toggles.snap
---
source: tests/tui_snapshot.rs
assertion_line: 214
expression: view
---
  Pi (dummy/dummy-model)
  ctrl+l: model  ctrl+p: next  ctrl+shift+p: prev  ctrl+o: tools  shift+tab: ...
  resources: 0 skills, 0 prompts, 0 themes, 0 extensions

line 20
line 21
line 22
line 23
line 24
line 25

  Assistant:

    Analysis complete.
  [100%] ↑/↓ PgUp/PgDn Shift+Up/Down to scroll

  Tool output expanded

  Enter: send  Shift+Enter: newline  Alt+Enter: multi-line  [thinking: off]
  │ > Type a message... (/help, /exit)
  │ >
  │ >

  Tokens: 0 in / 0 out  |  main  |  Persist: balanced  |  /help  |  Ctrl+C: quit
