tests/snapshots/tui_snapshot__tui_multi_turn_conversation.snap
---
source: tests/tui_snapshot.rs
assertion_line: 214
expression: view
---
  Pi (dummy/dummy-model)
  ctrl+l: model  ctrl+p: next  ctrl+shift+p: prev  ctrl+o: tools  shift+tab: ...
  resources: 0 skills, 0 prompts, 0 themes, 0 extensions


  Assistant:

    Hello!



  You: How are you?

  Assistant:

    Doing great, thanks.
  [100%] ↑/↓ PgUp/PgDn Shift+Up/Down to scroll

  Enter: send  Shift+Enter: newline  Alt+Enter: multi-line  [thinking: off]
  │ > Type a message... (/help, /exit)
  │ >
  │ >

  Tokens: 0 in / 0 out  |  main  |  Persist: balanced  |  /help  |  Ctrl+C: quit
